Correción de bugs

--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -542,6 +542,96 @@
     "Add New Room": "Añadir Nueva Sala",
     "Create a new area or room to organize your tables.": "Crea una nueva área o sala para organizar tus mesas.",
     "Room name (e.g., Terrace)": "Nombre de la sala (ej., Terraza)",
-    "Save": "Guardar"
+    "Save": "Guardar",
+    "Administrator": "Administrador",
+  "Employee": "Empleado",
+  "Register Employee": "Registrar Empleado",
+  "Select a profile": "Selecciona un perfil",
+  "Profile":"Perfil",
+    "Search by name or category...": "Buscar por nombre o categoría...",
+    "Add New Item": "Añadir Nuevo Artículo",
+    "Edit Item": "Editar Artículo",
+    "Modify the item details.": "Modifica los detalles del artículo.",
+    "Add a new item to your inventory.": "Añade un nuevo artículo a tu inventario.",
+    "Register Movement": "Registrar Movimiento",
+    "Name": "Nombre",
+    "Current Stock": "Stock Actual",
+    "Min. Stock": "Stock Mín.",
+    "Unit": "Unidad",
+    "Register Entry": "Registrar Entrada",
+    "Register Exit": "Registrar Salida",
+    "This action cannot be undone. This will permanently delete the item.": "Esta acción no se puede deshacer. Esto eliminará permanentemente el artículo.",
+    "Yes, delete": "Sí, eliminar",
+    "No inventory items found.": "No se encontraron artículos en el inventario.",
+    "Item Deleted": "Artículo Eliminado",
+    "The item has been removed from inventory.": "El artículo ha sido eliminado del inventario.",
+    "Could not delete the item.": "No se pudo eliminar el artículo.",
+    "Search by name or contact...": "Buscar por nombre o contacto...",
+    "Add New Supplier": "Añadir Nuevo Proveedor",
+    "Edit Supplier": "Editar Proveedor",
+    "Modify the supplier details.": "Modifica los detalles del proveedor.",
+    "Add a new supplier for your inventory items.": "Añade un nuevo proveedor para tus artículos de inventario.",
+    "Contact Name": "Nombre de Contacto",
+    "Phone": "Teléfono",
+    "No suppliers found.": "No se encontraron proveedores.",
+    "Supplier Deleted": "Proveedor Eliminado",
+    "The supplier has been removed.": "El proveedor ha sido eliminado.",
+    "Could not delete the supplier.": "No se pudo eliminar el proveedor.",
+    "Item Name":"Nombre del artículo",
+    "Unit of Measure":"Unidad de medida",
+    "Select a unit":"Selecciona una unidad",
+    "Minimum Stock":"Stock mínimo",
+    "Average Cost (Unit)":"Costo promedio (por unidad)",
+    "Main Supplier":"Proveedor",
+    "Select a supplier":"Selecciona un proveedor",
+    "Save Item":"Guardar artículo",
+    "Meats":"Carnes",
+    "Vegetables":"Vegetales",
+    "Fruits":"Frutas",
+    "Dairy":"Lácteos",
+    "Pantry":"Panadería",
+    "Beverages":"Bebidas",
+    "Cleaning":"Limpieza",
+    "Other":"Otro",
+    "Supplier Name":"Nombre del proveedor",
+    "Payment Terms":"Términos de pago",
+    "Save Supplier":"Guardar Proveedor",
+    "No recipes found.":"No se encontraron recetas",
+    "No menu items found.":"No se encontraron articulos de menú",
+    "Generate recipe ideas based on your inventory.":"Genera ideas de recetas basadas en tu inventario.",
+    "RECIPE":"RECETA",
+    "TOTAL COST":"COSTO TOTAL",
+    "Manage your recipes and menu items.":"Administra tus recetas y artículos de menú.",
+    "Incomplete Form": "Formulario Incompleto",
+    "Please select a category to continue.":"Por favor, selecciona una categoría para continuar.",
+    "Choose how to deliver the bill to the customer.":"Escoge cómo entregar la cuenta al cliente.",
+    "Send via WhatsApp":"Enviar vía WhatsApp",
+    "Enter phone number":"Ingresa número de teléfono",
+    "Send":"Enviar",
+    "Print Ticket":"Imprimir Ticket",
+    "Printer Type":"Tipo de impresora",
+    "Print Physical Ticket":"Imprimir Ticket Físico",
+    "Register Payment":"Registrar pago",
+    "Paid Amount":"Monto pagado",
+    "Tip":"Propina",
+    "Confirm the payment details to close the order.":"Confirma los detalles de pago para cerrar la orden.",
+    "Payment Method":"Método de pago",
+    "Select a method":"Selecciona un método",
+    "Cash":"Efectivo",
+    "Credit Card":"Tarjeta de crédito",
+    "Debit Card":"Tarjeta de débito",
+    "Bank Transfer":"Transferencia bancaria",
+    "Requires Invoice":"Requiere Factura",
+    "Name or Business Name":"Nombre o razón social",
+    "Fiscal Address":"Domicilio fiscal",
+    "Confirm Payment & Close Order":"Confirma pago y cierra orden",
+    "Collaborator Dashboard":"Módulo de colaborador",
+    "Access your daily tasks and information.":"Acceso a tu espacio de actividades",
+    "Available Modules":"Módulos disponibles",
+    "Theme":"Tema",
+    "Language":"Idioma",
+    "Spanish":"Español",
+    "Change Password":"Cambiar contraseña",
+    "Log out":"Cerrar sesión"
 }
     
