genera la funcionalidad para verificar que la cuenta del restaurante est

--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -632,6 +632,7 @@
     "Language":"Idioma",
     "Spanish":"Español",
     "Change Password":"Cambiar contraseña",
-    "Log out":"Cerrar sesión"
+    "Log out":"Cerrar sesión",
+    "Manage my Subscription and Payments":"Administrar mi Suscripción y Pagos"
 }
     
