--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -633,6 +633,11 @@
     "Spanish":"Español",
     "Change Password":"Cambiar contraseña",
     "Log out":"Cerrar sesión",
-    "Manage my Subscription and Payments":"Administrar mi Suscripción y Pagos"
+    "Manage my Subscription and Payments":"Administrar mi Suscripción y Pagos",
+    "Contact & Support":"Contacto y Soporte",
+    "Have a question? Our AI assistant can help you, or escalate it to our team.":"Tienes alguna duda? Nuestro asistente IA puede ayudarte o escalar tu solicitud a nuestro equipo humano.",
+    "Hello, I'm Tlalli, your support agent.":"Hola, soy Tlacualli, tu agente de soporte.",
+    "I'm here to help you improve your experience. Tell me, how can I support you?":"Estoy aquí para ayudarte a mejorar tu experiencia. Dime, ¿Cómo puedo apoyarte?",
+    "Type your question here...":"Escribe tu pregunta aquí..."
 }
     
