en /dashboard-admin/reports en la tarjeta de resumen de ventas, añade un

--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -638,6 +638,15 @@
     "Have a question? Our AI assistant can help you, or escalate it to our team.":"Tienes alguna duda? Nuestro asistente IA puede ayudarte o escalar tu solicitud a nuestro equipo humano.",
     "Hello, I'm Tlalli, your support agent.":"Hola, soy Tlalli, tu agente de soporte.",
     "I'm here to help you improve your experience. Tell me, how can I support you?":"Estoy aquí para ayudarte a mejorar tu experiencia. Dime, ¿Cómo puedo apoyarte?",
-    "Type your question here...":"Escribe tu pregunta aquí..."
+    "Type your question here...":"Escribe tu pregunta aquí...",
+    "Other...":"Otro",
+    "New Category Name":"Nuevo nombre de categoría",
+    "e.g., Disposables":"p.e., Desechables",
+    "Item Added":"Artículo añadido",
+    "The new item has been added to inventory":"El nuevo artículo ha sido añadido al inventario",
+    "Use as a template":"Puedes ocupar una de tus recetas como base",
+    "Select a recipe to duplicate...":"Selecciona una receta para duplicar...",
+    "Start by adding an ingredient.":"Comienza añadiendo un ingrediente",
+    "e.g., Classic Burger (Copy)":"p.e., Hamburguesa Clásica"
 }
     
