Actualiza menu y reports

--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -661,6 +661,7 @@
     "Your insights will appear here":"Tu análisis aparecerá aquí",
     "Generate a report to begin.":"Genera un reporte para iniciar.",
     "Today's Tips":"Propinas del día",
-    "Recommendations":"Recomendaciones"
+    "Recommendations":"Recomendaciones",
+    "Login Succesful":"Ingreso exitoso"
 }
     
