Implementa IA en menu precio y descripcion

--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -669,6 +669,8 @@
     "Generate with AI":"Generar con IA",
     "Description Generated":"Descripción Generada",
     "The AI has generated a description for your dish.":"Se ha generado una descripción con IA para tu platillo",
-    "The menu item has been updated":"El artículo ha sido actualizado"
+    "The menu item has been updated":"El artículo ha sido actualizado",
+    "Login Successful":"Acceso correcto",
+    "Welcome back,":"Bienvenido, "
 }
     
