en /dashboard-admin/contact la conversación se desborda de la tarjeta. A

--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -671,6 +671,7 @@
     "The AI has generated a description for your dish.":"Se ha generado una descripción con IA para tu platillo",
     "The menu item has been updated":"El artículo ha sido actualizado",
     "Login Successful":"Acceso correcto",
-    "Welcome back,":"Bienvenido, "
+    "Welcome back":"Bienvenido",
+    "Create a room to start adding tables.":"Añade una sala para empezar a agregar mesas"
 }
     
